--- a/02 Statistical Learning - Conceptual.Rmd
+++ b/02 Statistical Learning - Conceptual.Rmd
@@ -1,18 +1,53 @@
 ---
 title: "02 Statistical Learning - Conceptual"
 output: html_document
+fontsize: 11pt
 ---
 
 1. For each of parts (a) through (d), indicate whether we would generally
 expect the performance of a flexible statistical learning method to be
 better or worse than an inflexible method. Justify your answer.
-(a) The sample size n is extremely large, and the number of predictors p is small.
+
+(a) The sample size n is extremely large, and the number of predictors p is small.\n
+**A flexible method will fit the data closer given the large sample size**
+
 (b) The number of predictors p is extremely large, and the number
-of observations n is small.
+of observations n is small.\n
+**In this case a flexible method is likely to overfit given the small number of observations**
+
 (c) The relationship between the predictors and response is highly
-non-linear.
-(d) The variance of the error terms, i.e. σ2 = Var(), is extremely
-high.
+non-linear.\n
+**A flexible method will fit the non-linear relationship closer than an inflexible method**
+
+(d) The variance of the error terms, i.e. σ^2 = Var(), is extremely
+high.\n
+**A flexible method will try to fit the error term so a more inflexible method will be better in this case**
+
+2. Explain whether each scenario is a classification or regression problem, and indicate whether we are most interested in inference or prediction. Finally, provide n and p.
+
+(a) We collect a set of data on the top 500 firms in the US. For each
+firm we record profit, number of employees, industry and the
+CEO salary. We are interested in understanding which factors
+affect CEO salary.
+
+(b) We are considering launching a new product and wish to know
+whether it will be a success or a failure. We collect data on 20
+similar products that were previously launched. For each product we have recorded whether it was a success or failure, price
+charged for the product, marketing budget, competition price,
+and ten other variables.
+
+(c) We are interested in predicting the % change in the USD/Euro
+exchange rate in relation to the weekly changes in the world
+stock markets. Hence we collect weekly data for all of 2012. For
+each week we record the % change in the USD/Euro, the %
+change in the US market, the % change in the British market,
+and the % change in the German market.
+
+3. We now revisit the bias-variance decomposition.
+
+(a) Provide a sketch of typical (squared) bias, variance, training error, test error, and Bayes (or irreducible) error curves, on a single plot, as we go from less flexible statistical learning methods
+towards more flexible approaches. The x-axis should represent
+
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
